--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </div>
 
     <footer class="footer">
-        <a class="bi bi-github" href="https://github.com/jdocdev"></a>
-        <a class="bi bi-youtube" href="https://www.youtube.com/channel/UCtvW6edonCGLQK9Y0wtVP6g"></a>        
-        <a class="bi bi-twitter" href="https://twitter.com/JuanDavid_Dev"></a>        
-        <a class="bi bi-instagram" href="https://www.instagram.com/juandavid_dev/"></a>
+        <a class="bi bi-github" href="https://github.com/jdocdev" target="_blank"></a>
+        <a class="bi bi-youtube" href="https://www.youtube.com/channel/UCtvW6edonCGLQK9Y0wtVP6g" target="_blank"></a>        
+        <a class="bi bi-twitter" href="https://twitter.com/JuanDavid_Dev" target="_blank"></a>        
+        <a class="bi bi-instagram" href="https://www.instagram.com/juandavid_dev/" target="_blank"></a>
     </footer>
     
 </body>
